# arbitrum-alloy

./: Cargo.toml  README.md
crates/arb-alloy/: Cargo.toml  README.md
crates/arb-alloy/src/: lib.rs
crates/consensus/: Cargo.toml  README.md
crates/consensus/src/: header.rs  lib.rs  receipt.rs  reth.rs
crates/consensus/src/transactions/: batchpostingreport.rs  contract.rs  deposit.rs  internal.rs  mod.rs  retry.rs  submit_retryable.rs  unsigned.rs  util.rs
crates/consensus/tests/: nitro_header_fixture_parity.rs  nitro_receipt_fixture_parity.rs  nitro_tx_fixture_parity.rs
crates/network/: Cargo.toml  README.md
crates/network/src/: lib.rs
crates/precompiles/: Cargo.toml  README.md
crates/precompiles/src/: addresses.rs  lib.rs
crates/precompiles/src/interfaces/: arb_owner.rs  arb_retryable_tx.rs  arb_sys.rs  node_interface.rs
crates/precompiles/tests/: precompile_method_selectors.rs
crates/provider/: Cargo.toml  README.md
crates/provider/src/ext/: arb.rs  arbdebug.rs  arbtrace.rs  auctioneer.rs  timeboost.rs
crates/rpc-types/: Cargo.toml  README.md
crates/rpc-types/src/: lib.rs  receipt.rs  request.rs  reth_compat.rs  transaction.rs
crates/sequencer-network/: Cargo.toml  README.md
crates/sequencer-network/src/: init_message.rs  lib.rs  reader.rs
crates/sequencer-network/src/sequencer/: feed.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
docs/: README.md  quickstart.md
docs/guides/: connect-provider.md  local-dev-chain.md  precompiles.md  provider-extensions.md
