[package]
name = "arbitrum-alloy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Arbitrum Alloy SDK"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
arbitrum-alloy-consensus = { workspace = true, optional = true }
arbitrum-alloy-network = { workspace = true, optional = true }
arbitrum-alloy-precompiles = { workspace = true, optional = true }
arbitrum-alloy-provider = { workspace = true, optional = true }
arbitrum-alloy-rpc-types = { workspace = true, optional = true }

[features]
default = ["std", "k256", "serde"]

std = [
  "arbitrum-alloy-consensus?/std",
  "arbitrum-alloy-network?/std",
  "arbitrum-alloy-precompiles?/std",
  "arbitrum-alloy-provider?/std",
  "arbitrum-alloy-rpc-types?/std",
]

full = ["consensus", "network", "precompiles", "rpc-types", "provider"]

k256 = ["arbitrum-alloy-consensus?/k256"]

serde = [
  "arbitrum-alloy-consensus?/serde",
  "arbitrum-alloy-network?/serde",
  "arbitrum-alloy-provider?/serde",
  "arbitrum-alloy-rpc-types?/serde",
]

consensus = ["dep:arbitrum-alloy-consensus"]
network = ["dep:arbitrum-alloy-network"]
precompiles = ["dep:arbitrum-alloy-precompiles"]
provider = ["dep:arbitrum-alloy-provider"]
rpc-types = ["dep:arbitrum-alloy-rpc-types"]
