[package]
name = "arbitrum-alloy-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Arbitrum Network implementation for Alloy"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
alloy-network.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-provider.workspace = true
arbitrum-alloy-consensus.workspace = true
arbitrum-alloy-rpc-types.workspace = true

[features]
default = ["std"]
std = [
    "arbitrum-alloy-consensus/std",
    "arbitrum-alloy-rpc-types/std",
]
serde = [
    "arbitrum-alloy-consensus/serde",
    "arbitrum-alloy-rpc-types/serde",
]

[dev-dependencies]
alloy-primitives.workspace = true
alloy-signer.workspace = true
async-trait.workspace = true
