[package]
name = "arbitrum-alloy-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Arbitrum provider extensions for Alloy"

[lints]
workspace = true

[lib]
name = "arb_alloy_provider"
path = "src/lib.rs"

[dependencies]
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-rpc-types-eth.workspace = true
arbitrum-alloy-network.workspace = true
arbitrum-alloy-rpc-types.workspace = true
async-trait.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["std"]
std = [
    "alloy-provider/reqwest",
    "alloy-provider/reqwest-default-tls",
    "arbitrum-alloy-network/std",
    "arbitrum-alloy-rpc-types/std",
]
serde = [
    "arbitrum-alloy-network/serde",
    "arbitrum-alloy-rpc-types/serde",
]
