[package]
name = "arbitrum-alloy-rpc-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Arbitrum RPC types for Alloy"

[lints]
workspace = true

[lib]
name = "arb_alloy_rpc_types"
path = "src/lib.rs"

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-network-primitives.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-serde.workspace = true
arbitrum-alloy-consensus.workspace = true
serde.workspace = true
serde_json.workspace = true

# reth-compat: trait impls required for reth's RpcConvert blanket impl
# (FromConsensusTx, TryIntoSimTx, SignableTxRequest, TryIntoTxEnv)
reth-rpc-traits = { version = "0.5.0", default-features = false, optional = true }
alloy-evm = { version = "0.37.0", default-features = false, features = ["rpc"], optional = true }
revm = { version = "41.0.0", default-features = false, optional = true }

[features]
default = ["std"]
std = [
    "alloy-consensus/std",
    "alloy-eips/std",
    "alloy-network-primitives/std",
    "alloy-primitives/std",
    "alloy-rpc-types-eth/std",
    "alloy-serde/std",
    "arbitrum-alloy-consensus/std",
    "serde/std",
    "serde_json/std",
]
serde = []
reth-compat = ["reth-rpc-traits", "alloy-evm", "revm"]
