[package]
name = "arbitrum-alloy-sequencer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Network-layer types for the Arbitrum sequencer feed protocol"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
alloy-primitives.workspace = true
serde.workspace = true
alloy-core.workspace = true
serde_json.workspace = true
arbitrum-alloy-consensus.workspace = true
alloy-consensus.workspace = true
tracing.workspace = true
base64 = "0.22.1"
eyre = "0.6.12"
hex = "0.4.3"

[features]
default = ["std"]
std = [
    "alloy-primitives/std",
    "alloy-core/std",
    "serde/std",
    "serde_json/std",
    "arbitrum-alloy-consensus/std",
]
serde = []
