[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
publish = false

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-network.workspace = true
alloy-provider = { workspace = true, features = ["reqwest", "reqwest-rustls-tls"] }
alloy-contract.workspace = true
alloy-core.workspace = true
alloy-primitives = { workspace = true, features = ["std"] }
alloy-signer-local.workspace = true
arbitrum-alloy = { path = "../../crates/arb-alloy", default-features = false, features = ["full", "std", "serde", "k256"] }
dotenvy.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["time"] }

[lints]
workspace = true
